Fixed overflow issue
Fixed the issue with the padding of theTeam webpage to make it fit for tablets.

--- a/Project.css
+++ b/Project.css
@@ -524,8 +524,8 @@ footer {
     right: 20px;
     background-color: var(--secondary);
     color: var(--primary);
-    width: 35px;
-    height: 35px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     display: flex;
     align-items: center;
